# STM32-Examples

./: .gitignore  CMakeLists.txt  README.md
Example/01-General-Purpose-Input-Output/: 1.turn_on_led.c  2.toggle_led.c  3.read_input_value.c  4.bit_fields.c
Example/02-External-Interrupts/: 1.use_external_interrupt.c
Example/03-Serial-Communicate/: 1.send_message_to_PC.c  2.polling_receive.c  3.interrupt_receive.c  4.controlled_by_serial.c  5.serial_forward_message.c  led_command_parse_test.c  send_demo.py
Example/04-Clock-System/: 1.switch_clocks.c  2.systick_delay.c  3.systick_timed_task.c  4.clock_output.c
Example/05-Basic-Timer/: 1.timed_task.c  2.timed_distance.c
Example/06-General-Timer/: 1.external_clock.c  2.timer_cascade.c
Example/07-Analog-Digital-Converter/: 1.adc_read_one.c  2.adc_read_one_it.c  3.adc_read_some.c
Example/DAC/: 1.analog_output.c  (+4 more)
Firmware/: 01-1.turn_on_led.hex  01-2.toggle_led.hex  01-3.read_input_value.hex  01-4.bit_fields.hex  02-1.use_external_interrupt.hex  03-1.send_message_to_PC.hex  03-2.polling_receive.hex  03-3.interrupt_receive.hex  03-4.controlled_by_serial.hex  03-5.serial_forward_message.hex  04-1.switch_clocks.hex  04-3.systick_timed_task.hex  05-1.timed_task.hex  05-2.timed_distance.hex  06-1.external_clock.hex  06-2.timer_cascade.hex  07-1.adc_read_one.hex  07-2.adc_read_one_it.hex  07-3.adc_read_some.hex  08-1.USART_send_via_DMA.hex  08-2.USART_recv_via_DMA.hex  08-3.ADC_via_DMA.hex  08-4.memcopy_via_DMA.hex  I2C-1.software_I2C.hex  I2C-2.hardware_I2C.hex  mov.bat
Misc/: main.h  preprocessor.h  stm32f10x_it.c
(+25 files in other folders)
